# SuperIA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
omniscia/: __init__.py  __main__.py  app.py
omniscia/core/: __init__.py  brain.py  chat_llm.py  config.py  doctor.py  hitl.py  hotkeys.py  litellm_env.py  logging.py  proactive.py  redact.py  router.py  selftest.py  tools.py  types.py  vlm.py  wakeword.py  workers.py
omniscia/modules/apps/: discord_gui.py  jgrasp_gui.py
omniscia/modules/dev_agent/: __init__.py  autofix.py  autofix_cmd.py  coder.py  genesis.py  sandbox.py  scaffold.py  tooling.py
omniscia/modules/education/: __init__.py  pdf_word_autofill.py
omniscia/modules/games/: __init__.py  profiles.py  trex.py
omniscia/modules/memory/: __init__.py  omni_indexer.py  store.py  tooling.py  vector_store.py  vector_tooling.py
omniscia/modules/os_control/: __init__.py  filesystem.py  gui.py  openers.py  ui_automation_tools.py  win_windows.py  win_windows_tools.py
omniscia/modules/stt/: __init__.py  base.py  factory.py  fallback_text.py  vosk_offline.py  whisper_openai.py
omniscia/modules/tts/: __init__.py  base.py  factory.py  fallback_none.py  pyttsx3_tts.py
omniscia/modules/vision/: __init__.py  ocr.py  rewind.py  screenshot.py
omniscia/modules/web/: __init__.py  tooling.py
omniscia/tools/: __init__.py
omniscia/tools/custom/: __init__.py  example_ping.py  loader.py
scripts/: omni_index_daemon.py  vosk_debug.py
scripts/windows/: build_exe.bat  run_omniscia.bat  run_omniscia_exe.bat  setup_all.bat  setup_all.ps1
tests/: test_chat_llm.py  test_compile_router.py  test_discord_router.py  test_filesystem_known_folder_prefix.py  test_game_autoplay_router.py  test_jgrasp_router.py  test_llm_guard_discord.py  test_omega_toggle_router.py  test_open_app_risk.py  test_pdf_word_router.py  test_rewind_config.py  test_scaffold_router.py  test_screenshot_router.py  test_selftest.py  test_stt_vosk_fallback.py  test_trex_router.py  test_tts_flags_config.py  test_vector_auto_remember_flag.py  test_vlm_config.py  test_voice_toggle_router.py  test_wakeword.py
